--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
-    <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
-  </body>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MarCal 跨区域营销日历</title>
+    <script>
+        // 重定向到构建后的应用
+        window.location.href = '/dist/public/index.html';
+    </script>
+</head>
+<body>
+    <div style="text-align: center; padding: 50px; font-family: Arial, sans-serif;">
+        <h1>MarCal 跨区域营销日历</h1>
+        <p>正在加载应用...</p>
+        <p>如果页面没有自动跳转，请<a href="/dist/public/index.html">点击这里</a></p>
+    </div>
+</body>
 </html>
